# megastructure

./: .gitignore
api/egcomponent/: egcomponent.hpp  generator.hpp  traits.hpp
api/host/: .eg  host.hpp
api/hostdll/: hostdll.hpp
api/hosts/basic/: .eg
api/hosts/geometry/: .eg
api/hosts/python/: .eg
api/hosts/unreal/: .eg
api/megastructure/: activity.hpp  buffer.hpp  clientMap.hpp  clientServer.hpp  component.hpp  coordinator.hpp  egcomponent.hpp  log.hpp  mega.hpp  networkAddressTable.hpp  oldcode.cpp  program.hpp  queue.hpp
api/protocol/: megastructure.pb.h  protocol_helpers.hpp
cmake/: CMakeLists.txt  blueprint_include.cmake  boost_include.cmake  clang_include.cmake  common_include.cmake  ed_include.cmake  eg_include.cmake  gtest_include.cmake  indicators_include.cmake  messagepack_include.cmake  protobuf_include.cmake  pybind11_include.cmake  spdlog_include.cmake  test_utils_include.cmake  unreal_include.cmake  xsde_include.cmake  zmq_include.cmake
cmake/component/: CMakeLists.txt
cmake/core/: CMakeLists.txt  megastructure_include.cmake
cmake/driver/: CMakeLists.txt
cmake/host/: CMakeLists.txt
cmake/hosts/: CMakeLists.txt
cmake/hosts/basic/: CMakeLists.txt
cmake/hosts/geometry/: CMakeLists.txt
cmake/hosts/hostdll/: CMakeLists.txt
cmake/hosts/python/: CMakeLists.txt
cmake/master/: CMakeLists.txt
cmake/protocol/: CMakeLists.txt
cmake/python_host/: CMakeLists.txt
cmake/python_lib/: CMakeLists.txt
cmake/resid/: CMakeLists.txt
cmake/resource_lib/: CMakeLists.txt
cmake/schema/: CMakeLists.txt  schema_include.cmake
cmake/slave/: CMakeLists.txt
cmake/tests/: CMakeLists.txt
cmake/tests/eg/: CMakeLists.txt
cmake/tests/host/: CMakeLists.txt
cmake/tests/hostdll/: CMakeLists.txt
cmake/tests/hostdll_runner/: CMakeLists.txt
cmake/tests/unit/: CMakeLists.txt
cmake/unreal/: CMakeLists.txt
src/component/: activities.cpp  activities.hpp  component.cpp  jobs.cpp  jobs.hpp  program.cpp  program.hpp
src/core/: activity.cpp  buffer.cpp  clientServer.cpp  coordinator.cpp  networkAddressTable.cpp  queue.cpp
src/driver/: build_implementation.cpp  build_implementation.hpp  build_interface.cpp  build_interface.hpp  build_tools.cpp  build_tools.hpp  command_build.cpp  command_clean.cpp  command_create.cpp  command_info.cpp  command_log.cpp  command_run.cpp  main.cpp  stacktrace.cpp
src/egcomponent/: generator.cpp  python_generator.cpp
src/generators/: configio_generator.cpp  generator.cpp  geometry_generator.cpp  instructionCodeGenerator.cpp  python_generator.cpp  unreal_generator.cpp
src/host/: host.cpp
src/hosts/basic/: basic.cpp
src/hosts/geometry/: config_conversions.hpp
src/hosts/hostdll/: hostdll.cpp
src/hosts/python/: inputhook.py  python_host.cpp  simple.py
src/master/: activities.cpp  activities.hpp  main.cpp  master.cpp  master.hpp
src/protocol/: megastructure.proto
src/python/: .eg  inputhook.py  python_host.cpp  python_iterator.cpp  python_iterator.hpp  python_reference.cpp  python_reference.hpp  python_reference_factory.cpp  python_reference_factory.hpp  simple.py  startup.py
src/resid/: blueprint.cpp  blueprint.hpp  main.cpp  resource.cpp  resource.hpp
src/schema/: .eg  environment_string.cpp  environment_string.hpp  mega_schema.xsd  project.cpp  project.hpp  projectTree.cpp  projectTree.hpp
src/schema/megaxml/: mega_schema-pimpl.cxx  mega_schema-pimpl.hxx  mega_schema-pskel.cxx  mega_schema-pskel.hxx  mega_schema-simpl.cxx  mega_schema-simpl.hxx  mega_schema-sskel.cxx  mega_schema-sskel.hxx  mega_schema.cxx  mega_schema.hxx
src/slave/: activitiesEG.cpp  activitiesEG.hpp  activitiesHost.cpp  activitiesHost.hpp  activitiesMaster.cpp  activitiesMaster.hpp  hostMap.cpp  hostMap.hpp  main.cpp  slave.cpp  slave.hpp
src/unreal/: unreal.hpp
tests/eg/: test_eg.cpp
tests/host/: .eg  host.cpp  main.cpp
tests/hostdll/: hostdll.cpp
tests/hostdll_runner/: hostdll_runner.cpp
tests/unit/: basic_test.cpp  build_tools.cpp  identifier_parser_test.cpp  message_pack_tests.cpp  protocol_test.cpp  spdlog_test.cpp
